--- a/server/api/appsettings.json
+++ b/server/api/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Db": "Host=ep-gentle-term-a4savj6o-pooler.us-east-1.aws.neon.tech; Database=neondb; Username=neondb_owner; Password=npg_2gdsDUHtbx7W; SSL Mode=VerifyFull; Channel Binding=Require;"
 }
